# calx-mill

./: Cargo.toml  LACUNAE.md  LICENSE  README.md
src/: lib.rs  main.rs  telemetry.rs  validity.rs
src/nvidia/: check.rs  csvio.rs  mktable.rs  mod.rs  ncu.rs  pattern.rs  projection.rs  ptxas.rs  pyfmt.rs  sass.rs  table.rs  verify.rs
tests/: gate_cli.rs  parity.rs  parsers.rs  substrates.rs  tensor_pipe.rs
tests/fixtures/: README.md
tests/fixtures/goldens/: census_base_anchors.csv  census_full_alu.csv  census_full_anchors.csv  census_full_fa_mini.csv  census_full_inject.csv  census_match.txt  check_sass_alu.txt  check_sass_anchors.txt  check_sass_fa_mini.txt  check_sass_inject.txt  check_sass_pipes.txt  project_fa_mini_dp4a.txt  project_ffma_anchor.txt  project_stream_anchor.txt  verify_projection.txt
tests/fixtures/ncu/: atomics_metrics.csv
tests/fixtures/ptxas/: ptxas_v_anchors.txt  ptxas_v_fixture.txt
tests/fixtures/registry/: anchors.csv
tests/fixtures/tu102/bench/alu/: alu.sass  pipes.sass
tests/fixtures/tu102/bench/proj/: anchors.sass  fa_mini.sass  inject.sass
tests/fixtures/tu102/data/results/t5820-2xrtx6000/: alu.csv  atomics.csv  cvt.csv  launch.csv  mem.csv  pipes.csv  proj.csv  runs.csv  sfu.csv  sync.csv  tensor.csv  x.csv
tests/fixtures/tu102/table/: na_sm75.csv  priors_t4.csv  tu102_ops.csv
